<resources>
    <string name="app_name">Warehouse Management System</string>
    <string name="product_name">Product Name</string>
    <string name="product_model">Product Model</string>
    <string name="select_category">Select Category</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="accept">Evet</string>
    <string name="decline">Hayır</string>
    <string name="cancel">Kapat</string>
    <string name="category">Category</string>
    <string name="stok">Stok</string>
    <string name="urun_ad_modeli">Ürün Adı / Modeli</string>
    <string name="kategori">Kategori</string>
    <string name="g_ncel_stok">Güncel Stok</string>
    <string name="stok_goruntule">Stok Görüntüle</string>
    <string name="urun_girisi">Ürün Girişi</string>
    <string name="urun_cikisi">Ürün Çıkışı</string>
    <string name="urun_sil">Ürün Sil</string>
    <string name="urun_ekle">Ürün Ekle</string>
    <string name="barkod_tara">Barkod Tara</string>
    <string name="stok_ara">Stok Ara</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome!</string>
    <string name="back_up">Silme İşlemini Geri Al!</string>
    <string-array name="category_array">
        <item>Hammadde</item>
        <item>Yarı Mamul</item>
        <item>Son Ürün</item>
    </string-array>
</resources>