<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.SignInActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/signin_banner"
        android:layout_margin="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textColorHint="@color/hintTextColor"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.03"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/username"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/password"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textColorHint="@color/hintTextColor"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account_sign_up"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

</LinearLayout>