<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.StockActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textStockName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:hint="@string/urun_ad_modeli"
                android:textColorHint="#808080"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/textStockCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/kategori"
                android:textColorHint="#808080"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/g_ncel_stok"
                android:textColorHint="#808080"
                android:textSize="12sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#808080" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.95">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewStock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</layout>
