<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="stockproduct"
            type="com.icanerdogan.warehousemanagementsystem.model.Product" />
    </data>

    <LinearLayout
        android:id="@+id/rowLayoutStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/winterhue1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewProductBarcodeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{stockproduct.productBarcodeNumber.toString()}"
            android:visibility="gone">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewProductName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:hint="@string/product_name"
                        android:padding="5dp"
                        android:text="@{stockproduct.productName}"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewProductModel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:hint="@string/product_model"
                        android:padding="5dp"
                        android:text="@{stockproduct.productModel}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0.1dp"
                android:layout_height="80dp"
                android:background="#808080" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@{stockproduct.productCategory}"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="0.1dp"
                android:layout_height="80dp"
                android:background="#808080" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewStock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/stok"
                    android:text="@{stockproduct.productStock.toString()}"
                    android:textColor="@color/black"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#808080" />
    </LinearLayout>

</layout>
